--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,16 +53,19 @@
         app:layout_constraintHorizontal_weight="1"
         android:onClick="onClick"
         android:text="@string/choose_audio"/>
-
-    <TextView
-        android:id="@+id/tv_msg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/btn_choose_video"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:scrollbars="vertical"
-        android:textSize="16sp"
-        android:padding="5dp"/>
+        app:layout_constraintRight_toRightOf="parent">
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:padding="5dp"/>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
